Fixed Swagger issue on UserModule Apis
