# api/user.go
@@ -8,22 +8,23 @@ import (
 )
 
 // isUserExist godoc
-// @Summary User already exist
+// @Summary To check whether Email already registered with any User or not.
 // @Description To check if user exists or not
 // @Tags User Module
 // @Produce json
 // @Success 200 {object} EmailCheck
+// @Param       json  body EmailInput true "It takes email as input"
 // @Failure      400  string Bad Request
 // @Failure      404  string Page Not found
 // @Failure      500  string Internal Server Error
 // @Router /isUserExist [post]
 func isUserExist(c *gin.Context) {
-	email := ""
-	if err := c.ShouldBindJSON(&email); err != nil {
+	var emailInput EmailInput
+	if err := c.ShouldBindJSON(&emailInput); err != nil {
 		c.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
 		return
 	}
-	isExist, err := database.IsUserExist(email)
+	isExist, err := database.IsUserExist(emailInput.Email)
 	if err != nil {
 		c.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
 		return
@@ -42,7 +43,8 @@ func isUserExist(c *gin.Context) {
 // @Description To create a new user
 // @Tags User Module
 // @Produce json
-// @Success 200 {object} model.User
+// @Success 200 {object} model.CreateUser
+// @Param       json  body model.CreateUser true "It takes json as input"
 // @Failure      400  string Bad Request
 // @Failure      404  string Page Not found
 // @Failure      500  string Internal Server Error
@@ -67,12 +69,13 @@ func signUp(c *gin.Context) {
 // @Tags User Module
 // @Produce json
 // @Success 200 {object} database.User
+// @Param       json  body EmailPassword true "It takes json as input"
 // @Failure      400  string Bad Request
 // @Failure      404  string Page Not found
 // @Failure      500  string Internal Server Error
 // @Router /signIn [post]
 func signIn(c *gin.Context) {
-	var userReq model.CreateUser
+	var userReq EmailPassword
 	if err := c.ShouldBindJSON(&userReq); err != nil {
 		c.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
 		return
@@ -88,4 +91,13 @@ func signIn(c *gin.Context) {
 type EmailCheck struct {
 	Email string `json:"email,omitempty"`
 	Msg   string `json:"msg,omitempty"`
+}
+
+type EmailInput struct {
+	Email string `json:"email,omitempty"`
+}
+
+type EmailPassword struct {
+	Email    string `json:"email,omitempty"`
+	Password string `json:"password,omitempty"`
 }
